--- a/index.css
+++ b/index.css
@@ -42,3 +42,32 @@ h1 {
     2. Each image must transition from opacity: 0 to opacity: 1 on hover using any duration and timing function of your choice
 
 */
+
+#game {
+    display: grid;
+    grid-template-columns: repeat(3, 128px);
+    grid-template-rows: repeat(3, 128px);
+    gap: 16px;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .card {
+    width: 128px;
+    height: 128px;
+    overflow: hidden;
+    position: relative;
+    transition: box-shadow 0.3s ease; 
+  }
+  
+  .card:hover {
+    box-shadow: 4px 6px 8px rgb(0 0 0 / 40%); /
+  }
+  
+ 
+  .card:hover img {
+    opacity: 1;
+  }
+  
+  
+  
